added first API methods
